--- a/bib.bib
+++ b/bib.bib
@@ -94,17 +94,17 @@ title = {{Pervasive Computing in Time and Space: The Culture and Context of 'Pla
 url = {http://dx.doi.org/doi:10.1109/IE.2011.65},
 year = {2011}
 }
+@inproceedings{Applin2013,
+author = {Applin, Sally A and Fischer, Michael},
+booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
+title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
+year = {2013}
+}
 @inproceedings{Applin2013a,
 abstract = {We explore how PolySocial Reality (PoSR), a framework for representing how people, devices and communication technologies interrelate, can be applied to developing use cases within integrated IoT and Smart Environment paradigms, giving special consideration to the nature of location-aware messaging from sensors, and the resultant data collection.},
 author = {Applin, Sally A and Fischer, Michael},
 booktitle = {Proceedings of the IEEE Conference on Intelligent User Interfaces (IUI 2013) IUI Workshop on Location Awareness for Mixed and Dual Reality (LAMDa)},
 title = {{Thing Theory: Connecting Humans to Location-Aware Smart Environments}},
-year = {2013}
-}
-@inproceedings{Applin2013,
-author = {Applin, Sally A and Fischer, Michael},
-booktitle = {Proceedings of the IEEE International Symposium on Technology and Society (ISTAS)},
-title = {{Watching Me, Watching You (Process Surveillance and Agency in the Workplace)}},
 year = {2013}
 }
 @misc{Applin2011b,
@@ -123,24 +123,13 @@ year = {2012}
 }
 @inproceedings{ardito:combining,
 address = {New York, NY, USA},
-annote = {
-        From Duplicate 1 ( 
-        
-        
-          Combining multimedia resources for an engaging experience of cultural heritage
-        
-        
-         - Ardito, Carmelo; Costabile, Maria Francesca; Lanzilotti, Rosa; Simeone, Adalberto Lafcadio )
-
-        
-        
+annote = {        From Duplicate 1 (                           Combining multimedia resources for an engaging experience of cultural heritage                         - Ardito, Carmelo; Costabile, Maria Francesca; Lanzilotti, Rosa; Simeone, Adalberto Lafcadio )
+                
 Introduces the CHeR model, for creating, converting into digital form \& maintaining the
 multitude of data related to cultural heritage sites. Observes that cultural heritage sites
 often arouse little involvement in young people, particularly when presented with the ruins
 of ancient settlements whose current appearance no longer reflects their original aspect and purpose.
-
         
-
       },
 author = {Ardito, Carmelo and Costabile, Maria Francesca and Lanzilotti, Rosa and Simeone, Adalberto Lafcadio},
 booktitle = {Proceedings of the 2010 ACM workshop on Social, adaptive and personalized multimedia interaction and access},
@@ -297,6 +286,21 @@ pages = {133 -- 138},
 title = {{Virtual Reality, Art and Entertainment}},
 volume = {1},
 year = {1992}
+}
+@book{Baudrillard1994,
+abstract = {The first full-length translation in English of an essential work of postmodernist thought},
+author = {Baudrillard, Jean},
+booktitle = {Idea},
+editor = {Glaser, Sheila F},
+number = {4},
+pages = {164},
+pmid = {4434685},
+publisher = {University of Michigan Press},
+series = {The Body, in theory},
+title = {{Simulacra and Simulation}},
+url = {http://www.amazon.com/dp/0472065211},
+volume = {29},
+year = {1994}
 }
 @article{Beck2013,
 author = {Beck, Stephan and Kunert, Andr\'{e} and Kulik, Alexander and Froehlich, Bernd},
@@ -609,7 +613,6 @@ year = {2006}
 address = {New York, New York, USA},
 annote = {Uses a CAVE with a 2-armed haptic interface. Applicability of haptic interfaces for cross
 reality?
-
         
 Useful quote for the shortcomings of self-proclaimed virtual worlds - "Such environments suffer
 either from a lack of realism or a low degree of interactivity, due to technological and
@@ -715,16 +718,16 @@ pages = {1--7},
 title = {{Indoor Positioning System Using Accelerometry and High Accuracy Heading Sensors}},
 year = {2003}
 }
+@misc{Constantin2003,
+author = {Constantin, Corina},
+title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence}},
+year = {2003}
+}
 @article{Constantin2003a,
 author = {Constantin, Corina},
 file = {:home/cj/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Constantin - 2003 - Virtual Environments and the Sense of Being There An SEM Model of Presence Extended abstract submitted for presentat.pdf:pdf},
 pages = {1--18},
 title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence Extended abstract submitted for presentation at the 6}},
-year = {2003}
-}
-@misc{Constantin2003,
-author = {Constantin, Corina},
-title = {{Virtual Environments and the Sense of Being There: An SEM Model of Presence}},
 year = {2003}
 }
 @inproceedings{coutrix:interaction,
@@ -779,16 +782,16 @@ title = {{Arduino sketch for Pangolin}},
 url = {https://bitbucket.org/cj\_davies/arduino\_hmc6434\_ublox\_max\_6\_tinygps},
 urldate = {01/04/2013}
 }
-@misc{Daviesb,
-author = {Davies, C J},
-title = {{Database as tar archive suitable for input into pg\_restore}},
-url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
-urldate = {01/04/2013}
-}
 @misc{Daviesc,
 author = {Davies, C J},
 title = {{Database as plain-text SQL script file}},
 url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_sql\_plaintext},
+urldate = {01/04/2013}
+}
+@misc{Daviesb,
+author = {Davies, C J},
+title = {{Database as tar archive suitable for input into pg\_restore}},
+url = {http://straylight.cs.st-andrews.ac.uk/cj\_davies\_psql\_db\_tar\_for\_pg\_restore},
 urldate = {01/04/2013}
 }
 @misc{Daviesa,
@@ -806,30 +809,18 @@ year = {2012}
 }
 @inproceedings{deamicis:gamebased,
 address = {New York, NY, USA},
-annote = {
-        From Duplicate 2 ( 
-        
-        
-          Game based technology to enhance the learning of history and cultural heritage
-        
-        
-         - De Amicis, Raffaele; Girardi, Gabrio; Andreolli, Michele; Conti, Giuseppe )
-
-        
-        
+annote = {        From Duplicate 2 (                           Game based technology to enhance the learning of history and cultural heritage                         - De Amicis, Raffaele; Girardi, Gabrio; Andreolli, Michele; Conti, Giuseppe )
+                
 Abstract only that talks about the use of game technologies to support learning of users
 within cultural heritage sites. Says that the level of realism is ideal to visualise cultural
 heritage if a string focus on the environment's atmosphere \& immersion is required, "emphasising
 environmental effects such as fog, sky, water, particles", all of which self-proclaimed virtual
 worlds aren't as good at.
-
         
 Uses Unity3D! Mentions that it can produce web browser based applications as well as standalone
 ones, has a simple authoring interface \& "exploits the latest graphical hardware by making extensive
 use of shaders to deliver high quality graphics".
-
         
-
       },
 author = {{De Amicis}, Raffaele and Girardi, Gabrio and Andreolli, Michele and Conti, Giuseppe and Amicis, Raffaele De},
 booktitle = {Proceedings of the International Conference on Advances in Computer Enterntainment Technology},
@@ -1141,13 +1132,6 @@ pages = {256},
 title = {{Mirror Worlds: or the Day Software Puts the Universe in a Shoebox...How It Will Happen and What It Will Mean}},
 year = {1993}
 }
-@misc{Gelissen2008,
-author = {Gelissen, Jean},
-publisher = {International Organization for Standardization},
-title = {{Summary of MPEG-V}},
-url = {http://mpeg.chiariglione.org/working\_documents.php},
-year = {2008}
-}
 @article{Gelissen2009,
 annote = {        From Duplicate 1 (                           Introduction to MPEG-V                         - Gelissen, Jean )
                 
@@ -1165,6 +1149,13 @@ title = {{Introduction to MPEG-V}},
 url = {http://journals.tdl.org/jvwr/article/view/742/533},
 volume = {2},
 year = {2009}
+}
+@misc{Gelissen2008,
+author = {Gelissen, Jean},
+publisher = {International Organization for Standardization},
+title = {{Summary of MPEG-V}},
+url = {http://mpeg.chiariglione.org/working\_documents.php},
+year = {2008}
 }
 @article{Gelissen2011,
 abstract = {In this issue, we report on the first phase of MPEG-V, a work that started in 2007. MPEG-V was conceived as a unified effort to develop standards within virtual worlds, and between virtual worlds and real worlds. This work culminated in the publication of the ISO/IEC MPEG-V 'Media context and control' standards in January 2011. The papers in this issue of the Journal of Virtual World Research expose both the many current standards for virtual worlds, as well as the many missing standards. As such, the issue hints at many more places where standards are needed. To fulfill the potential of virtual worlds much more standardization (MPEG-V, and other standards) is needed.},
@@ -1342,17 +1333,17 @@ title = {{Bridging physical and virtual worlds with tagged documents, objects an
 url = {http://doi.acm.org/10.1145/632716.632738},
 year = {1999}
 }
-@misc{Hart,
-author = {Hart, Mikal},
-title = {{TinyGPS}},
-url = {http://arduiniana.org/libraries/tinygps/},
-urldate = {01/04/2013}
-}
 @misc{Harta,
 author = {Hart, Mikal},
 title = {{TinyGPS}},
 url = {http://arduiniana.org/libraries/tinygps/},
 urldate = {31/03/2013}
+}
+@misc{Hart,
+author = {Hart, Mikal},
+title = {{TinyGPS}},
+url = {http://arduiniana.org/libraries/tinygps/},
+urldate = {01/04/2013}
 }
 @misc{Haverinen2009,
 abstract = {Magnetic field fluctuations in modern buildings arise from both natural and man-made sources, such as steel and reinforced concrete structures, electric power systems, electric and electronic appliances, and industrial devices. If the anomalies of the magnetic field inside the building are nearly static and they have sufficient local variability, they provide a unique magnetic fingerprint that can be utilized in global self-localization. In this article, a Monte Carlo localization (MCL) technique based on this hypothesis is proposed. The feasibility of the technique is demonstrated by presenting a series of global localization experiments conducted in four arbitrarily selected buildings, including a hospital. The experiment setup consists of a mobile robot instrumented with a 3-axis magnetometer and a computer. In addition, successful human self-localization experiments were conducted by using a wireless wearable magnetometer. The reported experiments suggest that the ambient magnetic field may remain sufficiently stable for longer periods of time, giving support for self-localization techniques utilizing the local deviations of the field.},
@@ -1485,24 +1476,17 @@ url = {http://www.htc.com/www/smartphones/htc-one-s/},
 urldate = {28/03/2013},
 year = {2013}
 }
-@misc{Hughes2009,
-author = {Hughes, Ian},
-title = {{Wimbledon – A fanployee perspective}},
-url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
-urldate = {21/05/2012},
-year = {2009}
-}
-@misc{Hughes2006,
-author = {Hughes, Ian},
-title = {{Lessons from second life}},
-url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
-year = {2006}
-}
 @misc{Hughes2006c,
 author = {Hughes, Ian},
 title = {{Wimbledon in Second Life}},
 url = {http://eightbar.co.uk/2006/06/27/wimbledon-in-second-life/},
 urldate = {21/05/2012},
+year = {2006}
+}
+@misc{Hughes2006,
+author = {Hughes, Ian},
+title = {{Lessons from second life}},
+url = {http://eightbar.co.uk/2006/04/22/lessons-from-second-life/},
 year = {2006}
 }
 @misc{Hughes2006a,
@@ -1518,6 +1502,13 @@ title = {{Well it got my attention – Second Life}},
 url = {http://eightbar.co.uk/2006/04/04/well-it-got-my-attention-second-life/},
 urldate = {21/05/2012},
 year = {2006}
+}
+@misc{Hughes2009,
+author = {Hughes, Ian},
+title = {{Wimbledon – A fanployee perspective}},
+url = {http://www.feedingedge.co.uk/blog/2009/06/15/wimbledon-a-fanployee-perspective/},
+urldate = {21/05/2012},
+year = {2009}
 }
 @misc{Hunt,
 author = {Hunt, Darran},
@@ -1562,7 +1553,6 @@ year = {1998}
 @article{Ikeuchi2003,
 annote = {Research on digital preservation of cultural assets (in this case statues of Buddha) \&
 digital restoration of their original appearance. Gets very maths-ey.
-
         
 Usable quote - "Currently, a large number of cultural heritage objects around the world
 are deteriorating or being destroyed because of natural weathering, disasters and civil wars."},
@@ -1581,18 +1571,18 @@ title = {{Accuracy of IndoorAtlas indoor positioning system}},
 url = {https://www.indooratlas.com/faq\#q242897},
 urldate = {13/01/2014}
 }
-@misc{IndoorAtlasLtd.,
-author = {{IndoorAtlas Ltd.}},
-title = {{Technology}},
-url = {http://www.indooratlas.com/Technology},
-urldate = {11/02/2013}
-}
 @unpublished{IndoorAtlasLtd.2012,
 author = {{IndoorAtlas Ltd.}},
 pages = {5},
 title = {{Ambient magnetic field-based indoor location technology}},
 url = {http://web.indooratlas.com/web/WhitePaper.pdf},
 year = {2012}
+}
+@misc{IndoorAtlasLtd.,
+author = {{IndoorAtlas Ltd.}},
+title = {{Technology}},
+url = {http://www.indooratlas.com/Technology},
+urldate = {11/02/2013}
 }
 @incollection{Insko2003,
 abstract = {Virtual reality (VR) systems enable the user to feel as if they are present in a computer generated environment. But how do we determine the extent to which a user feels present in the virtual environment? This chapter examines three categories of methods commonly used for measuring presence; their use in the field, advantages, and disadvantages. Subjective measures rely on self-assessment by the user. Users answer questions such as "How real did the environment seem to you?", "Was the environment like a place you visited, or a series of images presented to you?". Behavioral measures examine actions or manners exhibited by the user that are responses to objects or events in the virtual environment. For example, does the user duck if a virtual object is thrown at his head. Physiological methods attempt to measure presence by gauging changes in the subject's heart rate, skin temperature, skin conductance, breathing rate, etc. In a stress-inducing virtual environment does the user exhibit physiological signs of stress? How do these methods compare when using the criteria of reliability, validity, objectivity, and sensitivity.},
@@ -2101,13 +2091,6 @@ url = {http://www.businessweek.com/magazine/content/06\_47/b4010068.htm?chan=tc\
 urldate = {21/05/2012},
 year = {2006}
 }
-@misc{Lifton2009a,
-author = {Lifton, Joshua},
-publisher = {Meta Institute for Computational Astrophysics (MICA)},
-title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
-url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
-year = {2009}
-}
 @inproceedings{lifton:adoption,
 annote = {        From Duplicate 1 (                           Consumer Adoption of Cross Reality Systems                         - Lifton, Joshua )
                 
@@ -2169,6 +2152,13 @@ school = {Massachusetts Institute of Technology},
 title = {{Dual Reality: An Emerging Medium}},
 type = {Ph.D. Dissertation},
 year = {2007}
+}
+@misc{Lifton2009a,
+author = {Lifton, Joshua},
+publisher = {Meta Institute for Computational Astrophysics (MICA)},
+title = {{Trends, Dual Reality, and Identity in Virtual Worlds}},
+url = {http://dspace.mit.edu/openaccess-disseminate/1721.1/61991},
+year = {2009}
 }
 @inproceedings{Lifton2007b,
 address = {New York, New York, USA},
@@ -2408,11 +2398,6 @@ photojournalism and everyday use}},
 volume = {36},
 year = {1998}
 }
-@misc{Mann1994,
-author = {Mann, Steve},
-title = {{'Mediated Reality'}},
-year = {1994}
-}
 @misc{Mann2002a,
 abstract = {Mixed Reality exists in many forms along a continuum from Augmented Reality (reality enhanced by graphics, such as Sutherland's work from more than 30 years ago) to more recent efforts at Augmented Virtuality (graphics enhanced by reality, graphics enhanced by video, etc.). Mixed Reality provides numerous ways to add together (mix) various proportions of real and virtual worlds. However, Mediated Reality is an even older tradition, introduced by Stratton more than 100 years ago. Stratton presented two important ideas:  1. the idea of constructing special eyeglasses to modify how he saw the world; and  2. the ecologically motivated approach to conducting his experiments within the domain of his own everyday personal life.  Stratton's seminal work has inspired a wide variety of devices that can be used to augment, deliberately diminish, or otherwise alter human visual perception. The first half of this paper presents some of the problems with the existing taxonomies (e.g. mixed reality) and distinctions (e.g. optical versus video see-through), that arise when we consider reality-modifying devices. The second half of the paper presents various new designs for reality-modifying devices, especially those used to modify only a portion of the visual reality stream, suitable for use in everyday life. These devices have the appearance of ordinary bifocal eyeglasses and reading glasses. Finally, a new kind of reality mediator that uses the eyeglass frames themselves as the mediating element is presented. This design makes it impossible for those other than the wearer, even upon very close inspection, to determine whether or not the eyeglasses contain a reality mediator. Such designs make possible livelong experiments and mediated reality experiences in personal everyday life, without the social stigma associated with obvious reality--modifying devices.  },
 author = {Mann, Steve},
@@ -2421,6 +2406,11 @@ keywords = {HCI,Mediated Reality,UX},
 title = {{Mediated Reality with implementations for everyday life}},
 url = {http://www.mitpressjournals.org/toc/pres/11/4},
 year = {2002}
+}
+@misc{Mann1994,
+author = {Mann, Steve},
+title = {{'Mediated Reality'}},
+year = {1994}
 }
 @misc{Mann2002,
 abstract = {Diminished reality is as important as augmented reality, and both are possible with a device called the Reality Mediator . Over the past two decades, we have designed, built, worn, and tested many different embodiments of this device in the context of wearable computing, Incorporated into the Reality Mediator is an "EyeTap" system, which is a device that quantifies and resynthesizes light that would otherwise pass through one or both lenses of the eye(s) of a wearer. The functional principles of EyeTap devices are discussed, in detail. The EyeTap diverts into a spatial measurement system at least a portion of light that would otherwise pass through the center of projection of at least one lens of an eye of a wearer. The Reality Mediator has at least one mode of operation in which it reconstructs these rays of light, under the control of a wearable computer system. The computer system then uses new results in algebraic projective geometry and comparametric equations to perform head tracking, as well as to track motion of rigid planar patches present in the scene. We describe how our tracking algorithm allows an EyeTap to alter the light from a particular portion of the scene to give rise to a computer-controlled, selectively mediated reality. An important difference between mediated reality and augmented reality includes the ability to not just augment but also deliberately diminish or otherwise alter the visual perception of reality. For example, diminished reality allows additional information to be inserted without causing the user to experience information overload. Our tracking algorithm also takes into account the effects of automatic gain control, by performing motion estimation in both spatial as well as tonal motion coordinates.},
@@ -2967,6 +2957,20 @@ author = {Pardue, Laurel and Dublon, Gershon and Jethwani, Anisha and Prouty, Je
 title = {{DoppelLab}},
 url = {http://www.media.mit.edu/resenv/doppellab/}
 }
+@inproceedings{park:xcream,
+address = {New York, NY, USA},
+author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
+booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
+doi = {http://doi.acm.org/10.1145/1967486.1967597},
+isbn = {978-1-4503-0421-4},
+keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
+pages = {692--695},
+publisher = {ACM},
+series = {iiWAS '10},
+title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
+url = {http://doi.acm.org/10.1145/1967486.1967597},
+year = {2010}
+}
 @inproceedings{Park2010,
 address = {New York, New York, USA},
 annote = {'XLogic Collaborative RFID/USN-Enabled Adaptive Middleware' aims to all-
@@ -2990,20 +2994,6 @@ pages = {692},
 publisher = {ACM Press},
 title = {{XCREAM}},
 url = {http://dl.acm.org/citation.cfm?id=1967486.1967597},
-year = {2010}
-}
-@inproceedings{park:xcream,
-address = {New York, NY, USA},
-author = {Park, Kyungeun and Yun, Jekuk and Byun, Changhyun and Kim, Yanggon and Chang, Juno},
-booktitle = {Proceedings of the 12th International Conference on Information Integration and Web-based Applications \&\#38; Services},
-doi = {http://doi.acm.org/10.1145/1967486.1967597},
-isbn = {978-1-4503-0421-4},
-keywords = {RFID (radio frequency identifcation),USN (universal sensor network),XCREAM (XLogic collaborative RFID/USN-Enabled ada,collaboration,middleware framework},
-pages = {692--695},
-publisher = {ACM},
-series = {iiWAS '10},
-title = {{XCREAM: collaborative middleware framework for RFID/USN-enabled applications}},
-url = {http://doi.acm.org/10.1145/1967486.1967597},
 year = {2010}
 }
 @misc{Parris2007,
@@ -3099,18 +3089,6 @@ publisher = {Springer-Verlag},
 title = {{Cyberspace as Representation of Space Experience: In Defence of a Phenomenological Approach}},
 year = {2002}
 }
-@article{Regenbrecht1992,
-author = {Regenbrecht, Holger and Schubert, Thomas},
-keywords = {augmented reality,sense of presence},
-title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
-year = {1992}
-}
-@inproceedings{Regenbrecht2002,
-author = {Regenbrecht, Holger and Schubert, Thomas},
-booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
-title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
-year = {2002}
-}
 @misc{Regenbrecht2002a,
 abstract = {It has long been argued that the possibility to interact in and with a virtual environment (VE) enhances the sense of pres- ence. On the basis of a three-component model of presence, we specify this hypothesis and argue that the mental represen- tation of possible actions should especially enhance spatial presence, and to a lesser extent the involvement and realness of a VE. We support this hypothesis in three studies. A corre- lative study showed that self-reported interaction possibilities correlated significantly with spatial presence, but not with the other two factors. A first experimental study showed that pos- sible self-movement significantly increased spatial presence and realness. A second experimental study showed that even the illusion of interaction, with no actual interaction taking place, significantly increased spatial presence.},
 author = {Regenbrecht, Holger and Schubert, Thomas},
@@ -3121,6 +3099,18 @@ pages = {425--434},
 title = {{Real and Illusory Interactions Enhance Presence in Virtual Environments}},
 volume = {11},
 year = {2002}
+}
+@inproceedings{Regenbrecht2002,
+author = {Regenbrecht, Holger and Schubert, Thomas},
+booktitle = {Proceedings of the 5th Annual International Workshop on Presence},
+title = {{Measuring presence in augmented reality environments: design and a first test of a questionnaire}},
+year = {2002}
+}
+@article{Regenbrecht1992,
+author = {Regenbrecht, Holger and Schubert, Thomas},
+keywords = {augmented reality,sense of presence},
+title = {{Measuring Presence in Augmented Reality Environments : Design and a First Test of a Questionnaire}},
+year = {1992}
 }
 @article{Reilly2010,
 abstract = {We introduce TwinSpace, a flexible software infrastructure for combining interactive workspaces and collaborative virtual worlds. Its design is grounded in the need to support deep connectivity and flexible mappings between virtual and real spaces to effectively support collaboration. This is achieved through a robust connectivity layer linking heterogeneous collections of physical and virtual devices and services, and a centralized service to manage and control mappings between physical and virtual. In this paper we motivate and present the architecture of TwinSpace, discuss our experiences and lessons learned in building a generic framework for collaborative cross-reality, and illustrate the architecture using two implemented examples that highlight its flexibility and range, and its support for rapid prototyping.},
@@ -3332,14 +3322,12 @@ address = {New York, New York, USA},
 annote = {Presentation of a virtual environment as something available for both desktop \& immersive
 visualisations. Construction of such 'information landscapes' requires preliminary design
 effort by some developer.
-
         
 In the related work section, mentions large scale (city scale) virtual reproductions \&
 several examples of 3D virtual cultural heritage using various technologies (some even
 allowing haptic interfaces) finally mentioning the existence of many virtual cultural
 heritage things in Second Life ('applications of real-time 3D graphics... ...which need
 dedicated clients').
-
         
 Explains that virtual reality does not anchor to physical reality - 3D environments can
 be entirely synthetic, can model a real world location or a museum that doesn't exist in
@@ -3384,19 +3372,13 @@ title = {{SL1200}},
 url = {http://www.sarantel.com/products/sl1200},
 urldate = {11/02/2013}
 }
-@misc{Schubert2001,
-abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
-author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
-booktitle = {Presence: Teleoperators and Virtual Environments},
-doi = {10.1162/105474601300343603},
-isbn = {1054-7460},
-issn = {1054-7460},
-number = {3},
-pages = {266--281},
-pmid = {18368863},
-title = {{The Experience of Presence: Factor Analytic Insights}},
-volume = {10},
-year = {2001}
+@misc{Schofield2012,
+author = {Schofield, Jack},
+booktitle = {The Guardian Technology Blog},
+title = {{Google Project Glass: will we really wear digital goggles?}},
+url = {http://www.theguardian.com/technology/2012/apr/05/google-project-glass-digital-goggles},
+urldate = {22/12/2014},
+year = {2012}
 }
 @incollection{Schubert1999,
 abstract = {Schubert, T.W., Friedman, F., \& Regenbrecht, H.T. (1999). Embodied presence in virtual environments. In: Paton R, Neilson I (Eds.). Visual representations and interpretations. Springer-Verlag, London, pp. 268–278.},
@@ -3410,6 +3392,20 @@ publisher = {Springer-Verlag},
 title = {{Embodied presence in virtual environments}},
 url = {http://link.springer.com/chapter/10.1007/978-1-4471-0563-3\_30},
 year = {1999}
+}
+@misc{Schubert2001,
+abstract = {Within an embodied cognition framework, it is argued that presence in a virtual environment (VE) develops from the construction of a spatial-functional mental model of the VE. Two cognitive processes lead to this model: the representation of bodily actions as possible actions in the VE, and the suppression of incompatible sensory input. It is hypothesized that the conscious sense of presence reflects these two components as spatial presence and involvement. This prediction was con- firmed in two studies (N ? 246 and N ? 296) assessing self-reports of presence and immersion experiences. Additionally, judgments of “realness” were observed as a third presence component. A second-order factor analysis showed a distinction between presence, immersion, and interaction factors. Building on these results, a thirteen-item presence scale consisting of three independent components was de- veloped and verified using confirmatory factor analyses across the two studies. Presence is a construct, a variable with various levels and dimensions. Biocca and Delaney (1995, p. 62)},
+author = {Schubert, Thomas and Friedmann, Frank and Regenbrecht, Holger},
+booktitle = {Presence: Teleoperators and Virtual Environments},
+doi = {10.1162/105474601300343603},
+isbn = {1054-7460},
+issn = {1054-7460},
+number = {3},
+pages = {266--281},
+pmid = {18368863},
+title = {{The Experience of Presence: Factor Analytic Insights}},
+volume = {10},
+year = {2001}
 }
 @misc{Schweinzer2010a,
 abstract = {This paper presents an indoor positioning system called LOSNUS (LOcalization of Sensor Nodes by Ultra-Sound). It offers high accuracy of \~{}10 mm, a locating rate up to \~{}10 cycles/s and is applicable for both tracking mobile and locating static devices. LOSNUS is mainly designed to localize static devices especially in a wireless sensor network (WSN) with numerously deployed sensor/actuator devices which enables substantially improving a lot of aspects of applications, e.g. network integration of nodes, supplying node locations to application programs, supervising locations with respect to accidentally dislocating, automatic setup and detecting faking of node locations. In order to deal with the demand of locating static devices, the system is optimized for cheap implementation and on the other hand for a high resolution of locations. Concept and basic operation, realization of system components and low-cost receiver principles, improved system performance and setup of a test system will be discussed in this paper.},
@@ -3465,6 +3461,16 @@ title = {{Welcome to the New Journal}},
 volume = {1},
 year = {1992}
 }
+@article{Sivan2011,
+abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {3},
+title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
+url = {https://journals.tdl.org/jvwr/article/view/6140},
+volume = {4},
+year = {2011}
+}
 @article{Sivan2009,
 annote = {        From Duplicate 1 (                           Overview: State of Virtual Worlds Standards in 2009                         - Sivan, Yesha )
                 
@@ -3480,26 +3486,6 @@ url = {http://journals.tdl.org/jvwr/article/view/671/539},
 volume = {2},
 year = {2009}
 }
-@article{Sivan2011,
-abstract = {With this issue JVWR celebrates its fourth year. During these years, we have matured to be the prime source of research in our emerging domain. Earlier this month (Dec. 2011), we celebrated, for the first time, by hosting a JVWR workshop at the International Conference on Information Systems (ICIS 2011 Shanghai, China. This issue takes an historical perspective. In many ways, this issue is a direct decedent of Volume 2, Number 3 - Technology, Economy and Standards in Virtual Worlds. The latter has drawn a vision, this one reports on the outcomes. On this note of moving from vision to reality, I wanted to wish us all happy new 2012.},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {3},
-title = {{Managing Editor’s Corner: Celebrating Four Years and Planning for the Next}},
-url = {https://journals.tdl.org/jvwr/article/view/6140},
-volume = {4},
-year = {2011}
-}
-@article{Sivan2008,
-annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
-author = {Sivan, Yesha},
-journal = {Journal of Virtual Worlds Research},
-number = {2},
-title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
-url = {http://journals.tdl.org/jvwr/article/view/359},
-volume = {1},
-year = {2008}
-}
 @article{Sevan2008,
 annote = {Very good \& thorough background/introduction to 'real virtual worlds', assuming no previous knowledge into the subject. Focuses strongly on Second Life.},
 author = {Sivan, Yesha},
@@ -3510,6 +3496,16 @@ number = {1},
 pages = {1--32},
 title = {{3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce 3D3C Real Virtual Worlds Defined : The Immense Potential of Merging 3D , Community , Creation , and Commerce}},
 url = {http://scholar.google.com/scholar?hl=en\&btnG=Search\&q=intitle:3D3C+Real+Virtual+Worlds+Defined\#0},
+volume = {1},
+year = {2008}
+}
+@article{Sivan2008,
+annote = {Interesting bit about Vuzix iWear VR920 3D goggles which, through a special driver for Second Life, allowed you to view a virtual world simply by turning your head (but of course didn't work for any other virtual world \& in fact only a specific version of Second Life) - but shows that controlling the gaze of the avatar/camera from a real-time external data source is possible through modification of the VW server (eg a region module in OpenSim).},
+author = {Sivan, Yesha},
+journal = {Journal of Virtual Worlds Research},
+number = {2},
+title = {{Real Virtual Worlds SOS (State of Standards) Q3-2008}},
+url = {http://journals.tdl.org/jvwr/article/view/359},
 volume = {1},
 year = {2008}
 }
@@ -3655,11 +3651,9 @@ accuracy of the lighting (measuring emission spectra of different oils burning \
 fact that "there are very few high fidelity reconstructions that attempt to authentically represent how a
 site may have been perceived in the past. Crucial to this accurate perception is the need to correctly
 model the ancient lighting."
-
         
 Most self-defined virtual worlds (eg Second Life, OpenSim, etc.) don't have complex enough rendering/lighitng
 engines for this (except Avatar Reality, based on some version of CryEngine).
-
         
 Used Maya in combination with Radiance, a suite of tools for lighting simulation. Allows archaeologists to
 determine how light would have fallen on different parts of structures in their original (non-ruined) conditions
@@ -3818,6 +3812,22 @@ publisher = {Rowman \& Littlefield},
 title = {{Our Split Screens}},
 year = {2004}
 }
+@book{Turkle2011,
+author = {Turkle, Sherry},
+pages = {384},
+publisher = {Basic Books},
+title = {{Alone Together: Why We Expect More From Technology And Less From Each Other}},
+year = {2011}
+}
+@book{Turkle1997,
+author = {Turkle, Sherry},
+edition = {1st Touchs},
+isbn = {0684833484},
+pages = {354},
+publisher = {Simon \& Schuster},
+title = {{Life on the Screen}},
+year = {1997}
+}
 @incollection{Tzortzaki2002,
 author = {Tzortzaki, Delia},
 booktitle = {Virtual Space: Spatiality in Virtual Inhabited 3D Worlds},
@@ -3834,17 +3844,17 @@ title = {{MAX-6 series}},
 url = {http://www.u-blox.com/en/gps-modules/pvt-modules/max-6.html},
 urldate = {11/02/2013}
 }
-@misc{U-bloxAG2012,
-author = {u-blox AG},
-title = {{MAX-6 Product Summary}},
-url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
-year = {2012}
-}
 @misc{U-bloxAGa,
 author = {u-blox AG},
 title = {{u-center GPS evaluation software}},
 url = {http://www.u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html},
 urldate = {28/03/2012}
+}
+@misc{U-bloxAG2012,
+author = {u-blox AG},
+title = {{MAX-6 Product Summary}},
+url = {http://www.u-blox.com/images/downloads/Product\_Docs/MAX-6\_ProductSummary\_(GPS.G6-HW-10089).pdf},
+year = {2012}
 }
 @misc{UgoTrade2007,
 annote = {        From Duplicate 1 (                           EOLUS Makes Leap To 3D Internet On Second Life                         - UgoTrade )
@@ -3951,27 +3961,15 @@ year = {2011}
 }
 @inproceedings{vlahakis:archeoguide,
 address = {New York, NY, USA},
-annote = {
-        From Duplicate 2 ( 
-        
-        
-          Archeoguide
-        
-        
-         - Vlahakis, Vassilios; Ioannidis, Nikos; Karigiannis, John; Tsotros, Manolis; Gounaris, Michael; Almeida, Luis; Stricker, Didier; Gleue, Tim; Christou, Ioannis T.; Carlucci, Renzo )
-
-        
-        
+annote = {        From Duplicate 2 (                           Archeoguide                         - Vlahakis, Vassilios; Ioannidis, Nikos; Karigiannis, John; Tsotros, Manolis; Gounaris, Michael; Almeida, Luis; Stricker, Didier; Gleue, Tim; Christou, Ioannis T.; Carlucci, Renzo )
+                
 A system that provides on-site help \& augmented reality reconstructions of ancient ruins. Claims to have
 applications ranging from archaeological research to education to multimedia publishing and cultural
 tourism.
-
         
 Had a laptop, tablet computer \& PDA version of the system, used GPS in some to ascertain location, compass
 to ascertain direction \& to augment reality accordingly.
-
         
-
       },
 author = {Vlahakis, Vassilios and Ioannidis, Nikos and Karigiannis, John and Tsotros, Manolis and Gounaris, Michael and Almeida, Luis and Stricker, Didier and Gleue, Tim and Christou, Ioannis T. and Carlucci, Renzo},
 booktitle = {Proceedings of the 2001 conference on Virtual reality, archeology, and cultural heritage},
